apps/git/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-web
spec:
  selector:
    app: git
  type: ClusterIP
  ports:
  - name: git-web
    protocol: TCP
    port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: git-ssh
spec:
  selector:
    app: git
  type: LoadBalancer
  loadBalancerIP: ${GIT_SSH_IP}
  ports:
  - name: git-ssh
    protocol: TCP
    port: 22
