apps/git/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-web
spec:
  rules:
  - host: git.${EXTERNAL_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: git-web
            port:
              number: 80
